# switch-api-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  local.switch-api-rs.plist
src/: cpu.rs  display.rs  main.rs  power.rs
