[package]
name = "rust-switch-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"        # Actix Web is a powerful, pragmatic, and extremely fast web framework for Rust
env_logger = "0.9.0"   # A logging implementation for `log` which is configured via an environment variable.
